# RNAMake

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  _config.yml  atom.html  build_docker_images  compile.py  docker-compose.yml  docker_build_and_run  genindex.html  help_with_docker.md  index.html  py-modindex.html  requirements.txt  run_unittests.py  searchindex.js  setup.py  text.txt
apps/: CMakeLists.txt  README.md  generate_options.py
apps/apt_new_interface/: apt_new_interface.cc  apt_new_interface.h
apps/apt_stablization/: apt_stablization.cc
apps/build_flex_helices/: build_flex_helices.cc
apps/build_motif_graph/: build_motif_graph.cxx  build_motif_graph.hxx
apps/build_sqlite_libraries/: STATUS.md  build_sqlite_libraries.cpp  build_sqlite_libraries.h
apps/compare_db_files/: compare_db_files.cpp  compare_db_files.h
apps/ddg_tecto/: ddg_tecto.cc  ddg_tecto.h  tecto_graph_setup.cc  tecto_graph_setup.h
apps/design_rna/: design_rna.cpp
apps/design_rna_scaffold/: design_rna_scaffold.cc  design_rna_scaffold.cpp  design_rna_scaffold.h  design_rna_scaffold_options.h  main.cpp  options.csv
apps/dock_motif/: dock_motif.cc
apps/eternabot/: eternabot.cpp
apps/follow_path_process/: follow_path_process.cpp
apps/general_helix_sampler/: general_helix_sampler.cc
apps/get_best_solutions/: get_best_solutions.cc
apps/hash_motifs/: hash_motifs.cc
apps/mini_ttr/: mini_ttr.h  test.top
apps/motif_from_pdb/: motif_from_pdb.cpp  motif_from_pdb.h
apps/opt_tecto_cutoff/: opt_tecto_cutoff.cc  opt_tecto_cutoff.h
apps/p5abc/: p5abc.hpp  start.motif
apps/path_builder_new/: path_builder_new.cpp
apps/rnamake2d/: rnamake2d.cpp  rnamake2d.h
apps/rnamake_2d/: rnamake_2d.cpp  rnamake_2d.h
apps/sample_helix/: sample_helix.cpp
apps/sequence_optimization_benchmarks/: sequence_optimization_benchmarks.cc  sequence_optimization_benchmarks.h
apps/sequence_optimizer_app/: sequence_optimizer_app.cc
apps/simulate_tectos/: simulate_tectos.cc
apps/simulate_tectos_devel/: main.cpp  simulate_tectos_devel.cc  simulate_tectos_devel.h
apps/structure_info/: structure_info.cc  structure_info.h
apps/thermo_simulation/: thermo_simulation.cpp
bindings/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  LINK  Makefile  README.md  build.ninja  cmake_install.cmake  rnamake.cpp  rules.ninja  setup.py
bindings/pyRNAMake/: __init__.py
bindings/src/: CMakeLists.txt  RNAMake.cpp  _base.cpp  _data_structure.cpp  _data_structure_graph.cpp  _data_structure_tree.cpp  _eternabot.cpp  _io.cpp  _io_detail.cpp  _io_error.cpp  _math.cpp  _motif.cpp  _motif_data_structure.cpp  _motif_search.cpp  _motif_search_exhaustive.cpp  _motif_search_monte_carlo.cpp  _motif_search_path_finding.cpp  _motif_tools.cpp  _resources.cpp  _rnamake.cpp  _secondary_structure.cpp  _sequence_optimization.cpp  _structure.cpp  _thermo_fluctuation.cpp  _thermo_fluctuation_graph.cpp  _thermo_fluctuation_graph_logging.cpp  _thermo_fluctuation_graph_sterics.cpp  _util.cpp  base.hpp  data_structure.hpp  eternabot.hpp  math.hpp  motif.hpp  motif_data_structures.hpp  motif_search.hpp  motif_tools.hpp  resources.hpp  secondary_structure.hpp  structure.hpp  thermo_fluctuation.hpp  (+1 more)
cmake/: CMakeLists.txt  Utils.py  backtrace.cmake  cmake_install.cmake  json.cmake  libs.cmake  make_project.py  unittests.cmake
cmake/build_gcc/: cmake_install.cmake
integration/x3dna/: .ninja_deps  .ninja_log  1.csv  1DUH_dssr.out  1F8V_dssr.out  1NB7_dssr.out  1WMQ_dssr.out  1WRQ_dssr.out  2BBV_dssr.out  2BX2_dssr.out  2I2Y_dssr.out  2KH9_dssr.out  2MB0_dssr.out  2MKI_dssr.out  2XB2_dssr.out  2XC7_dssr.out  2YH1_dssr.out  3HHZ_dssr.out  3IE1_dssr.out  3IEM_dssr.out  3IEV_dssr.out  3LOB_dssr.out  3QJP_dssr.out  3QRR_dssr.out  3R2C_dssr.out  3R9W_dssr.out  3ZLA_dssr.out  488D.out  4BS2_dssr.out  4C40_dssr.out  4CIO_dssr.out  4CS1_dssr.out  4J1G_dssr.out  4OO1_dssr.out  4WAL_dssr.out  4XWW_dssr.out  4ZLR_dssr.out  5AOR_dssr.out  5DNO_dssr.out  5EN1_dssr.out  (+28 more)
integration_tests/: CMakeLists.txt  TTR_MC_integration.cpp  TTR_integration_test.cpp  TTR_supplied_motif.cpp  build_around_protein.cpp  rebuild_p4_p6.cpp  tools.h
integration_tests/BUILD_AROUND_PROTEIN/: build_around_protein.cpp
integration_tests/REBUILD_P4_P6/: ARGS.txt  EXPECTED.csv  rebuild_p4_p6.cpp  rebuild_p4_p6_integration.cpp
integration_tests/TTR/: ARGS.txt  EXPECTED.csv  TTR_integration.cpp  TTR_integration_test.cpp
integration_tests/TTR_MC/: ARGS.txt  EXPECTED.csv  TTR_MC_integration.cpp
integration_tests/TTR_SUPPLIED_MOTIF/: ARGS.txt  EXPECTED.csv  TTR_supplied_motif.cpp  TTR_supplied_motif_integration.cpp
linux-binaries/: CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  added_motif_library_unittest  application_unittest  atom_unittest  basepair_state_unittest  basepair_unittest  build.sh  chain_closure_unittest  chain_unittest  cl_option_unittest  csv_unittest  eternabot  graph_adjacency_list_unittest  graph_iter_list_unittest  graph_unittest  hashing_unittest  linux_build.sh  log_unittest  motif_ensemble_unittest  motif_factory_unittest  motif_scorer_unittest  motif_state_ensemble_unittest  motif_state_unittest  motif_to_secondary_structure_unittest  motif_unittest  option_unittest  pdb_parser_unittest  quaternion_unittest  residue_type_unittest  residue_unittest  rotation_unittest  secondary_structure_parser_unittest  segmenter_unittest  ss_chain_unittest  ss_motif_unittest  ss_pose_unittest  ss_residue_unittest  (+8 more)
src/: CMakeLists.txt  main.cpp  motif_tree_state_alt_pather.cc  motif_tree_state_alt_pather.h
src/base/: application.hpp  assertions.h  backtrace.cpp  backtrace.h  backtrace.hpp  cl_option.cc  cl_option.h  command_line_parser.cpp  command_line_parser.hpp  env_manager.cpp  env_manager.h  exception.cpp  exception.h  exception.hpp  file_io.cc  file_io.cpp  file_io.h  file_io.hpp  global_constants.cc  global_constants.cpp  global_constants.h  global_constants.hpp  json.cpp  json.h  (+23 more)
unittests/: CMakeLists.txt  catch.hpp  command_line_args.hpp  common.hpp  doctest.h
(+3362 files in other folders)
